todo_app_backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
    spec:
      containers:
        - name: todo-app-backend
          image: todo-app-backend:1.0
